--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -74,8 +74,9 @@ hr {
   padding: 0 4%;
 }
 .container p, .container ol, .container ul {
-  font-size: 17px;
-  padding: 0 5%;
+  font-size: 24px;
+  line-height: 30px;
+  padding: 0 0%;
 }
 .container ol, .container ul { padding: 0 8%; }
 .container p:first-of-type {
