Set up the divider icons.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -22,7 +22,7 @@ html { box-sizing: border-box; }
   nav .p-{{id}} { border-color: {{ bg }}; }
   #{{id}} { background-color: {{ bg }} !important; color: {{ fg }}; }
   #{{id}} a { color: {{ fg }}; }
-  #{{id}} .sectiondivider { color: {{ bg }}; }
+  #{{id}} .sectiondivider { color: {{ fg }}; }
 {% endfor %}
 
 
@@ -221,8 +221,11 @@ nav ul li:hover, nav ul li.active {
   font-size: 130px;
   position: static;
   margin-top: -8px;
+  color: #000;
 }
-.sectiondivider .fa-circle { color: #fff; }
+.sectiondivider .fa-circle { 
+  color: #fff; 
+}
 
 .sectiondivider h5 {
   font-size:15px;
