Change divider color to match the surround.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -224,7 +224,7 @@ nav ul li:hover, nav ul li.active {
   color: #000;
 }
 .sectiondivider .fa-circle { 
-  color: #fff; 
+  color: #ab4f59; 
 }
 
 .sectiondivider h5 {
